[package]
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
async-trait = "0.1.53"
byteorder = "1.4.3"
futures = "0.3.21"
futures-util = "0.3.21"
rand = "0.8.5"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.17.0", features = ["full"]}
uuid = {version = "1.0.0", features = ["v4"]}
warp = "0.3.2"
[dev-dependencies]
rstest = "0.12.0"
