[package]
author = "ehsan2003.2003.382@gmail.com"
description = "backend app for an r/place clone"
edition = "2021"
license = "GPL-3.0"
name = "backend"
version = "0.1.0"

[dependencies]
async-trait = "0.1.53"
byteorder = "1.4.3"
futures = "0.3.21"
futures-util = "0.3.21"
rand = "0.8.5"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
uuid = {version = "1.0.0", features = ["v4"]}
warp = "0.3.2"
[dev-dependencies]
portpicker = "0.1.1"
rstest = "0.12.0"
